--- a/patternlab-config.json
+++ b/patternlab-config.json
@@ -56,8 +56,8 @@
   "patternStateCascade": ["inprogress", "inreview", "complete"],
   "patternStates": {
   },
-  "patternExportPatternPartials": [],
-  "patternExportDirectory": "./pattern_exports/",
+  "patternExportPatternPartials": ["molecules-primary-nav"],
+  "patternExportDirectory": "./../_includes/",
   "cacheBust": true,
   "starterkitSubDir": "dist",
   "outputFileSuffixes": {
